# best-practice-python

./: .gitignore  404.html  README.md  convert.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  references.md  requirements.txt  sitemap.xml  subtitles-ppz-b01-01.md.txt  template.docx  toword.py  toword.sh  资料.md
chap01/: index.html
code/: README.md  pyproject.toml
code/05/foo/foo/bar/: data.py
code/chap05/foo/foo/bar/: data.py
code/chap06/: copilot.py  typing.py
code/chap07/sample/: app.py
code/chap07/sample/core/: foo.py
code/chap07/tests/: test_app.py  test_bar.py
code/chap11/docker/docker_example/: CONTRIBUTING.md  HISTORY.md  pyproject.toml  pyrightconfig.json  repo.sh
code/chap11/docker/docker_example/docker/: build.sh  dockerfile
code/chap11/docker/docker_example/sample/: __init__.py
code/chap11/docker/docker_example/tests/: __init__.py
code/chap11/docker/sample/: LICENSE  README.md  tox.ini
code/chap11/docker/sample/.github/: ISSUE_TEMPLATE.md
code/chap11/docker/sample/docker/: dockerfile
code/chap11/docker/sample/docs/: installation.md  usage.md
code/chap11/docker/sample/tests/: test_app.py
code/sample/chap05/foo/: README.md
code/sample/chap05/foo/foo/bar/: data.py
code/sample/chap06/: README.md  lint.py  typing.py
code/sample/chap07/: README.md
code/sample/chap07/example10/: bar.py  foo.py
code/sample/chap07/sample/: app.py  bar.py
code/sample/chap07/sample/core/: foo.py
code/sample/chap07/tests/core/: test_foo.py
code/sample/chap07/tests/example10/: test_bar.py
code/sample/chap07/tests/sample/: test_app.py  test_bar.py
code/sample/chap07/tests/wher_to_patch/: test_bar.py
code/sample/chap07/tests/where_to_patch/: test_bar.py
code/sample/chap07/where_to_patch/: bar.py  foo.py
code/sample/chap11/: README.md  greetings.py
code/sample/chap11/docker/sample/: AUTHORS.md  mkdocs.yml
code/sample/chap11/docker/sample/docker/: build.sh
code/sample/chap11/docker/sample/docs/: api.md
code/sample/chap11/docker/sample/sample/: cli.py
(+92 files in other folders)
