[tool.poetry]
name = "best-practice-python"
version = "0.1.0"
description = ""
authors = ["aaron yang <aaron_yang@jieyu.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^4.0.3"
mkdocs-material = "livereload"
mkdocstrings = "^0.20.0"
livereload = "mkdocs-material"
mkdocs-custom-fences = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
