[tool.poetry]
name = "best-practice-python"
version = "0.1.0"
description = ""
authors = ["aaron yang <aaron_yang@jieyu.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
mkdocs  = { version = "^1.2.3"}
mkdocs-include-markdown-plugin  = { version = "^3.2.3"}
mkdocs-material  = { version = "^8.1.11"}
mkdocstrings  = { version = "^0.18.0"}
mkdocs-material-extensions  = { version = "^1.0.3"}
mkdocs-autorefs = {version = "^0.3.1"}
livereload = {version = "^2.6.3"}
mike = { version="^1.1.2", optional=true}
mkdocs-awesome-pages-plugin = "^2.8.0"
pre-commit = {version = "^2.17.0"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
