[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["aaron yang <aaron_yang@jieyu.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
